Only 1 player Fixed font color for dark mode

--- a/starborg-vs-bot10/src/ui/style.scss
+++ b/starborg-vs-bot10/src/ui/style.scss
@@ -3,6 +3,7 @@
     .Die {
         z-index: 5;
         top: 55%; left: 38%; width: 20%; height: 20%;
+        color: black;
     }
 
     .Bot10 {
